fix(self-improvement): Fix self improvement